--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
-  flutter_blue: ^0.5.0
+  #flutter_blue: ^0.5.0
   flutter:
     sdk: flutter
 
